<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Vento</string>
    <string name="nav_back">Back</string>
    <string name="home_empty_title">No connections</string>
    <string name="home_empty">Press the + button to add a connection.</string>
    <string name="home_empty_playground">Try the controls in the playground</string>
    <string name="home_add">Add connection</string>
    <string name="home_settings">Settings</string>
    <string name="home_view_list">List view</string>
    <string name="home_view_grid">Grid view</string>
    <string name="home_delete">Delete</string>
    <string name="home_pin">Pin</string>
    <string name="home_unpin">Unpin</string>
    <string name="home_pinned">Pinned</string>
    <string name="home_reorder">Reorder pinned</string>
    <string name="home_reorder_drag">Drag to reorder</string>
    <string name="home_reorder_up">Move up</string>
    <string name="home_reorder_down">Move down</string>
    <string name="home_connected">Connected</string>
    <string name="home_delete_title">Delete %1$s?</string>
    <string name="home_delete_message">The connection, saved credentials, and preview will be permanently deleted.</string>
    <string name="shortcut_label">%1$s (%2$s)</string>
    <string name="shortcut_deleted">This connection no longer exists.</string>
    <string name="plugin_needs_setup">The %1$s backend requires additional setup.</string>
    <string name="plugin_incompatible">This plugin does not work with this build of the app.</string>
    <string name="plugin_failed">This plugin did not load.</string>
    <string name="plugin_restart_title">Plugins changed</string>
    <string name="plugin_restart">Restart the app to use the plugins installed on this phone.</string>
    <string name="plugin_restart_action">Restart</string>
    <string name="plugin_set_up">Set up</string>
    <string name="plugin_uninstall">Uninstall</string>
    <string name="plugin_update">Update</string>
    <string name="editor_new">New connection</string>
    <string name="editor_edit">Edit connection</string>
    <string name="editor_name">Name</string>
    <string name="editor_address">Address (host[:port])</string>
    <string name="editor_credentials_clear">Clear saved credentials</string>
    <string name="editor_credentials_saved">Saved passwords are encrypted with AES-256-GCM by a hardware-backed keystore.</string>
    <string name="editor_credentials_none">You will be prompted for credentials upon connecting.</string>
    <string name="editor_credentials_title">Clear saved credentials?</string>
    <string name="editor_credentials_message">The saved username and/or password will be deleted.</string>
    <string name="editor_credentials_confirm">Clear</string>
    <string name="editor_backend">Protocol</string>
    <string name="editor_options">Options</string>
    <string name="editor_option_default">App default: %1$s</string>
    <string name="editor_option_on">On</string>
    <string name="editor_option_off">Off</string>
    <string name="editor_home_screen">Add to home screen</string>
    <string name="editor_home_screen_failed">The default launcher does not support shortcuts.</string>
    <string name="editor_save">Save</string>
    <string name="editor_discard">Discard</string>
    <string name="editor_keep_editing">Keep editing</string>
    <string name="editor_keep_title">Save changes?</string>
    <string name="editor_keep_message">There are unsaved changes to this connection.</string>
    <string name="editor_discard_title">Discard this connection?</string>
    <string name="editor_address_required">Address is required.</string>
    <string name="settings_title">Settings</string>
    <string name="settings_group_sessions">Sessions</string>
    <string name="settings_group_backends">Backends</string>
    <string name="settings_group_app">App</string>
    <string name="settings_plugin">Plugin</string>
    <string name="settings_backend_setup">Not set up</string>
    <string name="settings_general">General</string>
    <string name="settings_general_summary">Keyboard, clipboard, and controls.</string>
    <string name="settings_input">Touch and cursor</string>
    <string name="settings_input_summary">Acceleration, momentum, and scrolling.</string>
    <string name="settings_playground">Playground</string>
    <string name="settings_playground_summary">Fake desktop for testing input.</string>
    <string name="settings_licenses">Licences</string>
    <string name="settings_licenses_summary">Licences and third-party libraries.</string>
    <string name="settings_source">Source code</string>
    <string name="settings_source_summary">github.com/pgaskin/vento</string>
    <string name="settings_version">Version</string>
    <string name="settings_developer_on">You are now a developer!</string>
    <string name="settings_developer_already">No need, you are already a developer.</string>
    <plurals name="settings_developer_steps">
        <item quantity="one">You are now %1$d step away from being a developer.</item>
        <item quantity="other">You are now %1$d steps away from being a developer.</item>
    </plurals>
    <string name="settings_session_timeout">Session timeout</string>
    <string name="settings_session_timeout_summary">Automatically disconnect inactive sessions.</string>
    <string name="settings_session_timeout_never">Never</string>
    <plurals name="duration_minutes">
        <item quantity="one">%1$d minute</item>
        <item quantity="other">%1$d minutes</item>
    </plurals>
    <plurals name="duration_hours">
        <item quantity="one">%1$d hour</item>
        <item quantity="other">%1$d hours</item>
    </plurals>
    <string name="settings_hud">Debug overlay</string>
    <string name="settings_hud_summary">Show cursor, viewport, gesture, and rendering debug information.</string>
    <string name="settings_keep_awake">Keep screen on</string>
    <string name="settings_keep_awake_summary">Disable the screen timeout while connected.</string>
    <string name="settings_immersive">Full screen</string>
    <string name="settings_immersive_summary">Hide the system bars while connected.</string>
    <string name="settings_private_ime">Treat the desktop as a password field</string>
    <string name="settings_private_ime_summary">Disable IME suggestions, auto-correction, and learning.</string>
    <string name="settings_modifier_resets_ime">Reset IME state when pressing modifiers</string>
    <string name="settings_modifier_resets_ime_summary">Return to the main IME view when pressing Ctrl, Alt or Shift on the extension keyboard.</string>
    <string name="settings_controls">Session controls</string>
    <string name="settings_controls_summary">Change how the disconnect, connection info, keyboard, and mouse actions are displayed.</string>
    <string name="controls_toolbar">Toolbar</string>
    <string name="controls_regions">Touch regions</string>
    <string name="controls_both">Toolbar and touch regions</string>
    <string name="settings_two_line_keys">Use two-row extension keyboard</string>
    <string name="settings_two_line_keys_summary">Reduces the amount of horizontal scrolling for the extension keyboard.</string>
    <string name="settings_mac_keys">Show additional modifiers</string>
    <string name="settings_mac_keys_summary">Show the Option and Command keys in the extension keyboard.</string>
    <string name="settings_clipboard_out">Send clipboard</string>
    <string name="settings_clipboard_out_summary">Send locally copied text to the remote machine.</string>
    <string name="settings_clipboard_in">Receive clipboard</string>
    <string name="settings_clipboard_in_summary">Update the local clipboard with copied text.</string>
    <string name="settings_release_keys">Release keys when losing focus</string>
    <string name="settings_release_keys_summary">Release all locally held keys when switching apps.</string>
    <string name="settings_region_hints">Ask about controls when connecting</string>
    <string name="settings_region_hints_summary">Explain the session controls and offer the choice between them on the first frame.</string>
    <string name="settings_previews">Store desktop previews</string>
    <string name="settings_previews_summary">Locally save encrypted preview screenshots of the remote desktop. Disabling this deletes all existing screenshots.</string>
    <string name="settings_connection_defaults">Connection defaults</string>
    <string name="settings_reset">Reset</string>
    <string name="settings_reset_summary">Set all values above back to their defaults.</string>
    <string name="settings_reset_all">Restore defaults</string>
    <string name="settings_reset_all_summary">Reset all session, backend, and app settings. Saved connections are not touched.</string>
    <string name="settings_reset_all_confirm">Reset all settings?</string>
    <string name="settings_reset_all_do">Reset</string>
    <string name="settings_reset_all_done">Settings cleared</string>
    <string name="settings_delete">Delete</string>
    <string name="settings_clear">Clear</string>
    <string name="settings_forget">Forget</string>
    <string name="settings_delete_connections">Delete all connections</string>
    <string name="settings_delete_connections_summary">Permanently delete all saved connections, along with their credentials and preview.</string>
    <string name="settings_delete_connections_confirm">Delete all connections?</string>
    <plurals name="settings_delete_connections_done">
        <item quantity="one">Deleted %1$d connection</item>
        <item quantity="other">Deleted %1$d connections</item>
    </plurals>
    <string name="settings_forget_hosts">Clear known hosts</string>
    <string name="settings_forget_hosts_summary">Forget all accepted server certificates.</string>
    <string name="settings_forget_hosts_confirm">Clear known hosts?</string>
    <string name="settings_forget_hosts_done">Known hosts cleared</string>
    <string name="settings_clear_libraries">Clear cached plugin libraries</string>
    <string name="settings_clear_libraries_summary">Delete cached copies of native libraries provided by plugins.</string>
    <string name="settings_clear_libraries_confirm">Clear cached plugin libraries?</string>
    <string name="settings_clear_libraries_done">Cached plugin libraries cleared</string>
    <string name="settings_delete_recordings">Delete playground recordings</string>
    <string name="settings_delete_recordings_summary">Delete touch and keyboard recordings written by the playground.</string>
    <string name="settings_delete_recordings_confirm">Delete playground recordings?</string>
    <plurals name="settings_delete_recordings_done">
        <item quantity="one">Deleted %1$d recording</item>
        <item quantity="other">Deleted %1$d recordings</item>
    </plurals>
    <string name="settings_transfer">Import and export</string>
    <string name="settings_transfer_summary">Backup/restore settings and connections.</string>
    <string name="transfer_export_connections">Export connections</string>
    <string name="transfer_export_connections_summary">Save all connections, optionally including saved passwords.</string>
    <string name="transfer_export_connections_message">The export is unencrypted. Trusted hosts and desktop previews are not included.</string>
    <string name="transfer_export_passwords">Include saved passwords</string>
    <string name="transfer_export_settings">Export settings</string>
    <string name="transfer_export_settings_summary">Save all app and backend settings.</string>
    <string name="transfer_export">Export</string>
    <string name="transfer_unlock_title">Unlock your device to export credentials</string>
    <string name="transfer_unlock_message">The unencrypted export will include your saved passwords.</string>
    <string name="panel_close">Close</string>
</resources>